# pipeline.anomaly.dimension.class

./: MANIFEST.in  README.md  makefile  setup.cfg
.github/workflows/: pep257.yml  py3.yml
pipeline_anomaly_dimension_class/: __init__.py
tests/docker/: test.cmd
tests/test/: __init__.py  test_dimension_class.py
