[metadata]
name = pipeline_anomaly_dimension_class
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Python class for pipeline anomaly dimension classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/pipeline.anomaly.dimension.class
project_urls =
    Bug Tracker = https://github.com/vb64/pipeline.anomaly.dimension.classy/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = pipeline_anomaly_dimension_class
include_package_data=True
install_requires = py23
